--- a/EverLight.ConsoleModul1/EverLight.ConsoleModul1.csproj
+++ b/EverLight.ConsoleModul1/EverLight.ConsoleModul1.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EverLight.BusinessLayer\EverLight.BusinessLayer.csproj" />
     <ProjectReference Include="..\EverLight.DTOs\EverLight.DTOs.csproj" />
   </ItemGroup>
