add new feature for ui modul and fixed bugs

--- a/EverLight.DataContext/EverLight.DC.csproj
+++ b/EverLight.DataContext/EverLight.DC.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EverLightDB.mdf" />
+    <None Remove="EverLightDB_log.ldf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="EverLightDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="EverLightDB_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
